--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: manual-mkdocs
+        
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
         with:
@@ -19,10 +22,12 @@ jobs:
 
       - name: mkdocs install
         run: python -m pip install mkdocs
-      
+
       - name: deploy
         run: |
-          git config user.name ${ GITHUB_ACTOR }
-          git config user.password ${ GITHUB_TOKEN }
+          git config user.name ${{ env.GITHUB_ACTOR }}
+          git config user.password ${{ secrets.GITHUB_TOKEN }}
+          git config user.email 18407784+jeacom25b@users.noreply.github.com
+
           mkdocs gh-deploy
         shell: bash
