--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
           git config user.name Jeacom25b
           git config user.password ${{ secrets.GITHUB_TOKEN }}
           git config user.email 18407784+jeacom25b@users.noreply.github.com
+          git pull origin manual-mkdocs
+          git push origin manual-mkdocs
 
           mkdocs gh-deploy
         shell: bash
