--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,5 +2,7 @@ site_name: Softwrap Manual
 
 nav:
     - Home: index.md
+        - 'Welcome to the Softwrap Manual' : "index.md"
+        - 'Installation' : "index.md"
 
 theme: readthedocs
