add tips and tricks section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
     - 'Getting started':
         - 'Instllation': 'installation.md'
         - 'Tutorials': 'tutorials.md'
+        - 'Tips and tricks': 'tips.md'
         - 'Interface': 'interface.md'
 
 
