--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: Softwrap Manual
 nav:
     - Home: index.md
     - 'Getting started':
-        - 'Instllation': 'installation.md'
+        - 'Installation': 'installation.md'
         - 'Tutorials': 'tutorials.md'
         - 'Tips and tricks': 'tips.md'
         - 'Interface': 'interface.md'
