--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: manual-mkdocs
-        
+
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
         with:
@@ -29,6 +29,6 @@ jobs:
           git config --global user.name Jeacom25b
           git config --global user.password ${{ secrets.GITHUB_TOKEN }}
           git config --global user.email 18407784+jeacom25b@users.noreply.github.com
-
+          python vid_html_gen.py
           mkdocs gh-deploy --clean --verbose --force
         shell: bash
